swapPanora work
